some improvements added

--- a/pages/content.html
+++ b/pages/content.html
@@ -6,8 +6,12 @@
     <title>My favorite book series</title>
 </head>
 <body>
-    <h1>My favorite book series</h1>
-    <p>Here I present you with a list of my favorite book series, with some information about every book. Check it out!</p>
+    <header>
+        <h1>My favorite book series</h1>
+        <a href="../index.html">Back</a>
+    </header>
+    <main>
+        <p>Here I present you with a list of my favorite book series, with some information about every book. Check it out!</p>
     <br>
     <ul>
         <li>
@@ -50,5 +54,6 @@
             </div>
         </li>
     </ul>
+    </main>
 </body>
 </html>
