--- a/pages/dune1.html
+++ b/pages/dune1.html
@@ -6,18 +6,33 @@
     <title>Dune</title>
 </head>
 <body>
-    <h1>Dune</h1>
-    <img src="../images/dune1.jpg" alt="Dune book cover">
-    <p>Set on the desert planet Arrakis, Dune is the story of the boy Paul Atreides, heir to a noble family tasked with ruling an inhospitable world where the only thing of value is the "spice" melange, a drug capable of extending life and enhancing consciousness. Coveted across the known universe, melange is a prize worth killing for...
-    </p>
-    <p>When House Atreides is betrayed, the destruction of Paul's family will set the boy on a journey toward a destiny greater than he could ever have imagined. And as he evolves into the mysterious man known as Muad'Dib, he will bring to fruition humankind's most ancient and unattainable dream.
-    </p>
-    <p>A stunning blend of adventure and mysticism, environmentalism and politics, Dune won the first Nebula Award, shared the Hugo Award, and formed the basis of what is undoubtedly the grandest epic in science fiction.      
-    </p>
-    <p>Then, on Harry's eleventh birthday, a strange man bursts in with some important news: Harry Potter is a wizard and has been awarded a place to study at Hogwarts. And so the first of the Harry Potter adventures is set to begin.
-    </p>
-    <a href="https://openlibrary.org/books/OL22275832M/Dune">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="dune2.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>Dune</h1>
+        <img src="../images/dune1.jpg" alt="Dune book cover">
+        <p>Set on the desert planet Arrakis, Dune is the story of the boy Paul Atreides,
+        heir to a noble family tasked with ruling an inhospitable world where the only 
+        thing of value is the "spice" melange, a drug capable of extending life and 
+        enhancing consciousness. Coveted across the known universe, melange is a prize 
+        worth killing for...
+        </p>
+        <p>When House Atreides is betrayed, the destruction of Paul's family will set the 
+        boy on a journey toward a destiny greater than he could ever have imagined. And as 
+        he evolves into the mysterious man known as Muad'Dib, he will bring to fruition 
+        humankind's most ancient and unattainable dream.
+        </p>
+        <p>A stunning blend of adventure and mysticism, environmentalism and politics,
+        Dune won the first Nebula Award, shared the Hugo Award, and formed the basis of 
+        what is undoubtedly the grandest epic in science fiction.      
+        </p>
+        <p>Then, on Harry's eleventh birthday, a strange man bursts in with some important 
+        news: Harry Potter is a wizard and has been awarded a place to study at Hogwarts. 
+        And so the first of the Harry Potter adventures is set to begin.
+        </p>
+        <a href="https://openlibrary.org/books/OL22275832M/Dune" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
