--- a/pages/dune2.html
+++ b/pages/dune2.html
@@ -6,12 +6,20 @@
     <title>Dune Messiah</title>
 </head>
 <body>
-    <h1>Dune Messiah</h1>
-    <img src="../images/dune2.jpg" alt="Dune Messiah book cover">
-    <p>The story of "Dune Messiah" concludes the story of Paul Atreides. With "Dune Messiah", Frank Herbert craftily twisted Paul's character, from a hero who ended the tyranny of the Padishah empire to a messiah figure championing a jihad that causes the death of billions of people.
-    </p>
-    <a href="https://openlibrary.org/books/OL7525229M/Dune_Messiah">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="dune1.html">Previous book</a>
+        <a href="dune3.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>Dune Messiah</h1>
+        <img src="../images/dune2.jpg" alt="Dune Messiah book cover">
+        <p>The story of "Dune Messiah" concludes the story of Paul Atreides. With "Dune
+        Messiah", Frank Herbert craftily twisted Paul's character, from a hero who ended 
+        the tyranny of the Padishah empire to a messiah figure championing a jihad that 
+        causes the death of billions of people.
+        </p>
+        <a href="https://openlibrary.org/books/OL7525229M/Dune_Messiah" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
