--- a/pages/dune4.html
+++ b/pages/dune4.html
@@ -6,12 +6,20 @@
     <title>God Emperor of Dune</title>
 </head>
 <body>
-    <h1>God Emperor of Dune</h1>
-    <img src="../images/dune4.jpg" alt="God Emperor of Dune book cover">
-    <p>In the fourth book of the series, God Emperor of Dune, we follow the story of the now-inhuman Leto Atreides, son of Paul, who once merged with a sandworm to preserve humanity, attaining a quasi-immortality. A rebellion stirs in his house to oppose his oppressive rule, but it might all play into his hands
-    </p>
-    <a href="https://openlibrary.org/works/OL893515W/God_Emperor_of_Dune_%28Dune_Chronicles_Book_4%29?edition=key%3A/books/OL4110208M">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="dune3.html">Previous book</a>
+        <a href="dune5.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>God Emperor of Dune</h1>
+        <img src="../images/dune4.jpg" alt="God Emperor of Dune book cover">
+        <p>In the fourth book of the series, God Emperor of Dune, we follow the story of
+        the now-inhuman Leto Atreides, son of Paul, who once merged with a sandworm to 
+        preserve humanity, attaining a quasi-immortality. A rebellion stirs in his house 
+        to oppose his oppressive rule, but it might all play into his hands
+        </p>
+        <a href="https://openlibrary.org/works/OL893515W/God_Emperor_of_Dune_%28Dune_Chronicles_Book_4%29?edition=key%3A/books/OL4110208M" target="_blank" >Further info</a>
+        </main>
 </body>
 </html>
