--- a/pages/got2.html
+++ b/pages/got2.html
@@ -6,12 +6,22 @@
     <title>A Clash of Kings</title>
 </head>
 <body>
-    <h1>A Clash of Kings</h1>
-    <img src="../images/got2.jpg" alt="A Clash of Kings book cover">
-    <p>From the ancient citadel of Dragonstone to the forbidding shore of Winterfell, chao reigns as pretenders to the Iron Throne of the Seven Kingdoms prepare to stake their claims.As a prophecy of doom cuts across the sky - a comet the colour of blood and flame - five factions struggle for control of a divided land. Against a backdrop of incest and fratricide, alchemy and murder, the price of gloryis measured in blood.  
-    </p>
-    <a href="https://openlibrary.org/books/OL25652831M/A_Clash_of_Kings">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="got1.html">Previous book</a>
+        <a href="got3.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>A Clash of Kings</h1>
+        <img src="../images/got2.jpg" alt="A Clash of Kings book cover">
+        <p>From the ancient citadel of Dragonstone to the forbidding shore of Winterfell,
+        chao reigns as pretenders to the Iron Throne of the Seven Kingdoms prepare to 
+        stake their claims.As a prophecy of doom cuts across the sky - a comet the colour 
+        of blood and flame - five factions struggle for control of a divided land. 
+        Against a backdrop of incest and fratricide, alchemy and murder, the price of 
+        gloryis measured in blood.  
+        </p>
+        <a href="https://openlibrary.org/books/OL25652831M/A_Clash_of_Kings" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
