--- a/pages/got3.html
+++ b/pages/got3.html
@@ -6,12 +6,28 @@
     <title>A Storm of Swords</title>
 </head>
 <body>
-    <h1>A Storm of Swords</h1>
-    <img src="../images/got3.jpg" alt="A Storm of Swords book cover">
-    <p>Of the five contenders for power, one is dead, another in disfavor, and still the wars rage as alliances are made and broken. Joffrey sits on the Iron Throne, the uneasy ruler of the Seven Kingdoms. His most bitter rival, Lord Stannis, stands defeated and disgraced, victim of the sorceress who holds him in her thrall. Young Robb still rules the North from the fortress of Riverrun. Meanwhile, making her way across a blood-drenched continent is the exiled queen, Daenerys, mistress of the only three dragons still left in the world. And as opposing forces manoeuver for the final showdown, an army of barbaric wildlings arrives from the outermost limits of civilization, accompanied by a horde of mythical Others—a supernatural army of the living dead whose animated corpses are unstoppable. As the future of the land hangs in the balance, no one will rest until the Seven Kingdoms have exploded in a veritable storm of swords...
-    </p>
-    <a href="https://openlibrary.org/works/OL257914W/A_Storm_of_Swords?edition=key%3A/books/OL6793617M">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="got2.html">Previous book</a>
+        <a href="got4.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>A Storm of Swords</h1>
+        <img src="../images/got3.jpg" alt="A Storm of Swords book cover">
+        <p>Of the five contenders for power, one is dead, another in disfavor, and still 
+        the wars rage as alliances are made and broken. Joffrey sits on the Iron Throne, 
+        the uneasy ruler of the Seven Kingdoms. His most bitter rival, Lord Stannis, 
+        stands defeated and disgraced, victim of the sorceress who holds him in her 
+        thrall. Young Robb still rules the North from the fortress of Riverrun. Meanwhile, 
+        making her way across a blood-drenched continent is the exiled queen, Daenerys, 
+        mistress of the only three dragons still left in the world. And as opposing forces 
+        manoeuver for the final showdown, an army of barbaric wildlings arrives from the 
+        outermost limits of civilization, accompanied by a horde of mythical Others—a 
+        supernatural army of the living dead whose animated corpses are unstoppable. As 
+        the future of the land hangs in the balance, no one will rest until the Seven 
+        Kingdoms have exploded in a veritable storm of swords...
+        </p>
+        <a href="https://openlibrary.org/works/OL257914W/A_Storm_of_Swords?edition=key%3A/books/OL6793617M" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
