--- a/pages/hp4.html
+++ b/pages/hp4.html
@@ -5,12 +5,21 @@
     <title>Harry Potter and the Goblet of Fire</title>
 </head>
 <body>
-    <h1>Harry Potter and the Goblet of Fire</h1>
-    <img src="../images/hp4.jpg" alt="Harry Potter and the Goblet of Fire book cover">
-    <p>The summer holidays are dragging on and Harry Potter can't wait for the start of the school year. It is his fourth year at Hogwarts School of Witchcraft and Wizardry, and there are spells to be learnt, potions to be brewed and Divination lessons to be attended. Harry is expecting this; however, other quite unexpected events are already on the march...
-    </p>
-    <a href="https://openlibrary.org/books/OL25683482M/Harry_Potter_and_the_Goblet_of_Fire">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="hp3.html">Previous book</a>
+        <a href="hp5.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>Harry Potter and the Goblet of Fire</h1>
+        <img src="../images/hp4.jpg" alt="Harry Potter and the Goblet of Fire book cover">
+        <p>The summer holidays are dragging on and Harry Potter can't wait for the start 
+        of the school year. It is his fourth year at Hogwarts School of Witchcraft and 
+        Wizardry, and there are spells to be learnt, potions to be brewed and Divination 
+        lessons to be attended. Harry is expecting this; however, other quite unexpected 
+        events are already on the march...
+        </p>
+        <a href="https://openlibrary.org/books/OL25683482M/Harry_Potter_and_the_Goblet_of_Fire" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
