--- a/pages/hp6.html
+++ b/pages/hp6.html
@@ -6,14 +6,24 @@
     <title>Harry Potter and the Half-Blood Prince</title>
 </head>
 <body>
-    <h1>Harry Potter and the Half-Blood Prince</h1>
-    <img src="../images/hp6.jpg" alt="Harry Potter and the Half-Blood Prince book cover">
-    <p>It is Harry Potter's sixth year at Hogwarts School of Witchcraft and Wizardry. As Voldemort's sinister forces amass and a spirit of gloom and fear sweeps the land, it becomes more and more clear to Harry that he will soon have to confront his destiny. But is he up to the challenges ahead of him?
-    </p>
-    <p>In this dark and breathtaking adventure, J.K. Rowling skilfully begins to unravel the complex web she has woven, as we discover more of the truth about Harry, Dumbledore, Snape and, of course, He Who Must Not Be Named...
-    </p>
-    <a href="https://openlibrary.org/works/OL82565W/Harry_Potter_and_the_Half-Blood_Prince?edition=key%3A/books/OL27931894M">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="hp5.html">Previous book</a>
+        <a href="hp7.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>Harry Potter and the Half-Blood Prince</h1>
+        <img src="../images/hp6.jpg" alt="Harry Potter and the Half-Blood Prince book cover">
+        <p>It is Harry Potter's sixth year at Hogwarts School of Witchcraft and Wizardry. 
+        As Voldemort's sinister forces amass and a spirit of gloom and fear sweeps the 
+        land, it becomes more and more clear to Harry that he will soon have to confront 
+        his destiny. But is he up to the challenges ahead of him?
+        </p>
+        <p>In this dark and breathtaking adventure, J.K. Rowling skilfully begins to 
+        unravel the complex web she has woven, as we discover more of the truth about 
+        Harry, Dumbledore, Snape and, of course, He Who Must Not Be Named...
+        </p>
+        <a href="https://openlibrary.org/works/OL82565W/Harry_Potter_and_the_Half-Blood_Prince?edition=key%3A/books/OL27931894M" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
