--- a/pages/hp7.html
+++ b/pages/hp7.html
@@ -6,12 +6,18 @@
     <title>Harry Potter and the Deathly Hallows</title>
 </head>
 <body>
-    <h1>Harry Potter and the Deathly Hallows</h1>
-    <img src="../images/hp7.jpg" alt="Harry Potter and the Deathly Hallows book cover">
-    <p>In Harry Potter and the Deathly Hallows, the seventh and final book in the epic tale of Harry Potter, Harry and Lord Voldemort each prepare for their ultimate encounter. 
-    </p>
-    <a href="https://openlibrary.org/works/OL82586W/Harry_Potter_and_the_Deathly_Hallows?edition=key%3A/books/OL10506200M">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="hp6.html">Previous book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>Harry Potter and the Deathly Hallows</h1>
+        <img src="../images/hp7.jpg" alt="Harry Potter and the Deathly Hallows book cover">
+        <p>In Harry Potter and the Deathly Hallows, the seventh and final book in the epic
+        tale of Harry Potter, Harry and Lord Voldemort each prepare for their ultimate 
+        encounter. 
+        </p>
+        <a href="https://openlibrary.org/works/OL82586W/Harry_Potter_and_the_Deathly_Hallows?edition=key%3A/books/OL10506200M" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
