--- a/pages/dune6.html
+++ b/pages/dune6.html
@@ -6,12 +6,19 @@
     <title>Chapterhouse: Dune</title>
 </head>
 <body>
-    <h1>Chapterhouse: Dune</h1>
-    <img src="../images/dune6.jpg" alt="Chapterhouse: Dune book cover">
-    <p>A direct follow-up to Heretics of Dune, the novel chronicles the continued struggles of the Bene Gesserit Sisterhood against the violent Honored Matres, who are succeeding in their bid to seize control of the universe and destroy the factions and planets that oppose them.
-    </p>
-    <a href="https://openlibrary.org/works/OL893508W/Chapterhouse_Dune?edition=key%3A/books/OL16257424M">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="dune5.html">Previous book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>Chapterhouse: Dune</h1>
+        <img src="../images/dune6.jpg" alt="Chapterhouse: Dune book cover">
+        <p>A direct follow-up to Heretics of Dune, the novel chronicles the continued 
+        struggles of the Bene Gesserit Sisterhood against the violent Honored Matres, who 
+        are succeeding in their bid to seize control of the universe and destroy the 
+        factions and planets that oppose them.
+        </p>
+        <a href="https://openlibrary.org/works/OL893508W/Chapterhouse_Dune?edition=key%3A/books/OL16257424M" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
