--- a/pages/got1.html
+++ b/pages/got1.html
@@ -6,12 +6,22 @@
     <title>A Game of Thrones</title>
 </head>
 <body>
-    <h1>A Game of Thrones</h1>
-    <img src="../images/got1.jpg" alt="A Game of Thrones book cover">
-    <p>A Game of Thrones is the first novel in A Song of Ice and Fire, a series of fantasy novels by the American author George R. R. Martin. It was first published on August 1, 1996. The novel won the 1997 Locus Award and was nominated for both the 1997 Nebula Award and the 1997 World Fantasy Award. The novella Blood of the Dragon, comprising the Daenerys Targaryen chapters from the novel, won the 1997 Hugo Award for Best Novella. In January 2011, the novel became a New York Times Bestseller and reached No. 1 on the list in July 2011. 
-    </p>
-    <a href="https://openlibrary.org/books/OL32670252M/A_Game_of_Thrones">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="got2.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>A Game of Thrones</h1>
+        <img src="../images/got1.jpg" alt="A Game of Thrones book cover">
+        <p>A Game of Thrones is the first novel in A Song of Ice and Fire, a series of 
+        fantasy novels by the American author George R. R. Martin. It was first published 
+        on August 1, 1996. The novel won the 1997 Locus Award and was nominated for both 
+        the 1997 Nebula Award and the 1997 World Fantasy Award. The novella Blood of the 
+        Dragon, comprising the Daenerys Targaryen chapters from the novel, won the 1997 
+        Hugo Award for Best Novella. In January 2011, the novel became a New York Times 
+        Bestseller and reached No. 1 on the list in July 2011. 
+        </p>
+        <a href="https://openlibrary.org/books/OL32670252M/A_Game_of_Thrones" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
