--- a/pages/got5.html
+++ b/pages/got5.html
@@ -6,18 +6,38 @@
     <title>A Dance with Dragons</title>
 </head>
 <body>
-    <h1>A Dance with Dragons</h1>
-    <img src="../images/got5.jpg" alt="A Dance with Dragons book cover">
-    <p>In the aftermath of a colossal battle, the future of the Seven Kingdoms hangs in the balance—beset by newly emerging threats from every direction. In the east, Daenerys Targaryen, the last scion of House Targaryen, rules with her three dragons as queen of a city built on dust and death. But Daenerys has thousands of enemies, and many have set out to find her. As they gather, one young man embarks upon his own quest for the queen, with an entirely different goal in mind.
-    </p>
-    <p>Fleeing from Westeros with a price on his head, Tyrion Lannister, too, is making his way to Daenerys. But his newest allies in this quest are not the rag-tag band they seem, and at their heart lies one who could undo Daenerys's claim to Westeros forever.
-    </p>
-    <p>Meanwhile, to the north lies the mammoth Wall of ice and stone—a structure only as strong as those guarding it. There, Jon Snow, 998th Lord Commander of the Night's Watch, will face his greatest challenge. For he has powerful foes not only within the Watch but also beyond, in the land of the creatures of ice.
-    </p>
-    <p>From all corners, bitter conflicts reignite, intimate betrayals are perpetrated, and a grand cast of outlaws and priests, soldiers and skinchangers, nobles and slaves, will face seemingly insurmountable obstacles. Some will fail, others will grow in the strength of darkness. But in a time of rising restlessness, the tides of destiny and politics will lead inevitably to the greatest dance of all.  
-    </p>
-    <a href="https://openlibrary.org/books/OL32670252M/A_Game_of_Thrones">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="got4.html">Previous book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>A Dance with Dragons</h1>
+        <img src="../images/got5.jpg" alt="A Dance with Dragons book cover">
+        <p>In the aftermath of a colossal battle, the future of the Seven Kingdoms hangs 
+        in the balance—beset by newly emerging threats from every direction. In the east, 
+        Daenerys Targaryen, the last scion of House Targaryen, rules with her three 
+        dragons as queen of a city built on dust and death. But Daenerys has thousands of 
+        enemies, and many have set out to find her. As they gather, one young man embarks 
+        upon his own quest for the queen, with an entirely different goal in mind.
+        </p>
+        <p>Fleeing from Westeros with a price on his head, Tyrion Lannister, too, is 
+        making his way to Daenerys. But his newest allies in this quest are not the 
+        rag-tag band they seem, and at their heart lies one who could undo Daenerys's 
+        claim to Westeros forever.
+        </p>
+        <p>Meanwhile, to the north lies the mammoth Wall of ice and stone—a structure only 
+        as strong as those guarding it. There, Jon Snow, 998th Lord Commander of the 
+        Night's Watch, will face his greatest challenge. For he has powerful foes not only 
+        within the Watch but also beyond, in the land of the creatures of ice.
+        </p>
+        <p>From all corners, bitter conflicts reignite, intimate betrayals are 
+        perpetrated, and a grand cast of outlaws and priests, soldiers and skinchangers, 
+        nobles and slaves, will face seemingly insurmountable obstacles. Some will fail, 
+        others will grow in the strength of darkness. But in a time of rising 
+        restlessness, the tides of destiny and politics will lead inevitably to the 
+        greatest dance of all.  
+        </p>
+        <a href="https://openlibrary.org/books/OL32670252M/A_Game_of_Thrones" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
