--- a/pages/hp2.html
+++ b/pages/hp2.html
@@ -6,14 +6,23 @@
     <title>Harry Potter and the Chamber of Secrets</title>
 </head>
 <body>
-    <h1>Harry Potter and the Chamber of Secrets</h1>
-    <img src="../images/hp2.jpg" alt="Harry Potter and the Chamber of Secrets book cover">
-    <p>Throughout the summer holidays after his first year at Hogwarts School of Witchcraft and Wizardry, Harry Potter has been receiving sinister warnings from a house-elf called Dobby. 
-    </p>
-    <p>Now, back at school to start his second year, Harry hears unintelligible whispers echoing through the corridors. Before long the attacks begin: students are found as if turned to stone. Dobby's predictions seem to be coming true.
-    </p>
-    <a href="https://openlibrary.org/books/OL48061949M/Harry_Potter_and_the_Chamber_of_Secrets">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="hp1.html">Previous book</a>
+        <a href="hp3.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>Harry Potter and the Chamber of Secrets</h1>
+        <img src="../images/hp2.jpg" alt="Harry Potter and the Chamber of Secrets book cover">
+        <p>Throughout the summer holidays after his first year at Hogwarts School of 
+        Witchcraft and Wizardry, Harry Potter has been receiving sinister warnings from a 
+        house-elf called Dobby. 
+        </p>
+        <p>Now, back at school to start his second year, Harry hears unintelligible 
+        whispers echoing through the corridors. Before long the attacks begin: students 
+        are found as if turned to stone. Dobby's predictions seem to be coming true.
+        </p>
+        <a href="https://openlibrary.org/books/OL48061949M/Harry_Potter_and_the_Chamber_of_Secrets" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
