--- a/pages/hp3.html
+++ b/pages/hp3.html
@@ -5,14 +5,25 @@
     <title>Harry Potter and the Prisoner of Azkaba</title>
 </head>
 <body>
-    <h1>Harry Potter and the Prisoner of Azkaba</h1>
-    <img src="../images/hp3.jpg" alt="Harry Potter and the Prisoner of Azkaba book cover">
-    <p>For Harry Potter, it's the start of another far-from-ordinary year at Hogwarts when the Knight Bus crashes through the darkness and comes to an abrupt halt in front of him. It turns out that Sirius Black, mass-murderer and follower of Lord Voldemort, has escaped and they say he is coming after Harry.
-    </p>
-    <p>In his first Divination class, Professor Trelawney sees an omen of death in Harry's tea leaves. And perhaps most frightening of all are the Dementors patrolling the school grounds with their soul-sucking kiss in search of fresh victims.
-    </p>
-    <a href="https://openlibrary.org/books/OL32396895M/Harry_Potter_and_the_Prisoner_of_Azkaban">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="hp2.html">Previous book</a>
+        <a href="hp4.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>Harry Potter and the Prisoner of Azkaba</h1>
+        <img src="../images/hp3.jpg" alt="Harry Potter and the Prisoner of Azkaba book cover">
+        <p>For Harry Potter, it's the start of another far-from-ordinary year at Hogwarts
+        when the Knight Bus crashes through the darkness and comes to an abrupt halt in 
+        front of him. It turns out that Sirius Black, mass-murderer and follower of Lord 
+        Voldemort, has escaped and they say he is coming after Harry.
+        </p>
+        <p>In his first Divination class, Professor Trelawney sees an omen of death in 
+        Harry's tea leaves. And perhaps most frightening of all are the Dementors 
+        patrolling the school grounds with their soul-sucking kiss in search of fresh 
+        victims.
+        </p>
+        <a href="https://openlibrary.org/books/OL32396895M/Harry_Potter_and_the_Prisoner_of_Azkaban" target="_blank">Further info</a>
+    </main>
 </body>
 </html> 
