--- a/pages/hp5.html
+++ b/pages/hp5.html
@@ -6,14 +6,24 @@
     <title>Harry Potter and the Order of the Phoenix</title>
 </head>
 <body>
-    <h1>Harry Potter and the Order of the Phoenix</h1>
-    <img src="../images/hp5.jpg" alt="Harry Potter and the Order of the Phoenix book cover">
-    <p>After the Dementors' attack on his cousin Dudley, Harry knows he is about to become Voldemort's next target. Although many are denying the Dark Lord's return, Harry is not alone, and a secret order is gathering at Grimmauld Place to fight against the Dark forces.
-    </p>
-    <p>Meanwhile, Voldemort's savage assaults on Harry's mind are growing stronger every day. He must allow Professor Snape to teach him to protect himself before he runs out of time.
-    </p>
-    <a href="https://openlibrary.org/books/OL37768153M/Harry_Potter_and_the_Order_of_the_Phoenix">Further info</a>
-    <br>
-    <a href="content.html" target="_blank">Back</a>
+    <header>
+        <a href="hp4.html">Previous book</a>
+        <a href="hp6.html">Next book</a>
+        <a href="content.html">Back to content</a>
+    </header>
+    <main>
+        <h1>Harry Potter and the Order of the Phoenix</h1>
+        <img src="../images/hp5.jpg" alt="Harry Potter and the Order of the Phoenix book cover">
+        <p>After the Dementors' attack on his cousin Dudley, Harry knows he is about to 
+        become Voldemort's next target. Although many are denying the Dark Lord's return, 
+        Harry is not alone, and a secret order is gathering at Grimmauld Place to fight 
+        against the Dark forces.
+        </p>
+        <p>Meanwhile, Voldemort's savage assaults on Harry's mind are growing stronger 
+        every day. He must allow Professor Snape to teach him to protect himself before he 
+        runs out of time.
+        </p>
+        <a href="https://openlibrary.org/books/OL37768153M/Harry_Potter_and_the_Order_of_the_Phoenix" target="_blank">Further info</a>
+    </main>
 </body>
 </html>
